# Admob4Kivy

./: README.md  pyproject.toml
src/admob4kivy/: __init__.py  api.py  backends.py
