[project]
name = "admob4kivy"
version = "0.1.2"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sahil Pixel" }
]
requires-python = ">=3.11.11"
dependencies = [
]

[dependency-groups]
android = [
    "pyjnius",
]

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[tool.uv.sources]

